--- a/My Web/rst.html
+++ b/My Web/rst.html
@@ -8,6 +8,9 @@
 </head>
 
 <body class="b">
+  <img class="r"
+    src="https://media-hbe1-2.cdn.whatsapp.net/v/t61.24694-24/466429390_1579840672721309_1516324613883036081_n.jpg?ccb=11-4&oh=01_Q5AaIR-tZRSgEKWk3SW88POw_0ZcYnawytunFYMxqA0zSwcB&oe=67F68C3E&_nc_sid=5e03e0&_nc_cat=108"
+    alt="Profiles">
   <div class="go">
     <p>Mohammad Smaeer Alrifaee</p>
   </div>
@@ -18,9 +21,6 @@
     <div class="e">
       <button class="stretch-button">
         Continue
-      </button>
-      <button class="delete">
-        Delete
       </button>
     </div>
   </div>
